--- a/Tema3-EquiposNBA/MainWindow.xaml
+++ b/Tema3-EquiposNBA/MainWindow.xaml
@@ -6,28 +6,46 @@
         xmlns:local="clr-namespace:Tema3_EquiposNBA"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-        <StackPanel>
-            <Border BorderBrush="Black">
-                <StackPanel Margin="10">
-                    <TextBlock Text="Los Ángeles Lakers" FontWeight="Bold" TextWrapping="Wrap" FontSize="20" HorizontalAlignment="Center"></TextBlock>
-                    <WrapPanel HorizontalAlignment="Center">
+    <StackPanel>
+        <Border BorderBrush="Black" Margin="5" CornerRadius="2"  BorderThickness="4">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF510CED" Offset="0.005"/>
+                    <GradientStop Color="#FFF5D608" Offset="0.946"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <StackPanel>
+                <TextBlock Text="Los Ángeles Lakers" FontWeight="Bold" TextWrapping="Wrap" FontSize="20"  HorizontalAlignment="Center"></TextBlock>
+                <WrapPanel HorizontalAlignment="Center">
 
-                        <Image Source="/Resources/9_lakers.png" Width="100"></Image>
-                        <Image Source="/Resources/9_lakers.png"  Width="100"></Image>
-                        <Image Source="/Resources/9_lakers.png"  Width="100"></Image>
-                    </WrapPanel>
+                    <Image Source="/Resources/9_lakers.png" Width="100"></Image>
+                    <Image Source="/Resources/14_lakers.png"  Width="100"></Image>
+                    <Image Source="/Resources/23_lakers.png"  Width="100"></Image>
+                    <Image Source="/Resources/3_lakers.png"  Width="100"></Image>
+                    <Image Source="/Resources/39_lakers.png"  Width="100"></Image>
+                </WrapPanel>
 
-                </StackPanel>
-            </Border>
-            <Border BorderBrush="Black">
-                <StackPanel>
-                    <TextBlock Text="Miami Heat" FontWeight="Bold"  TextWrapping="Wrap" FontSize="20" HorizontalAlignment="Center"></TextBlock>
-                    <WrapPanel HorizontalAlignment="Center">
-                        <Image Source="/Resources/9_lakers.png"  Width="100"></Image>
-                    </WrapPanel>
-                    
-                </StackPanel>
-            </Border>
-        </StackPanel>
+            </StackPanel>
+        </Border>
+        <Border  Margin="5" BorderBrush="Black" CornerRadius="2"  BorderThickness="4">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="Red" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <StackPanel>
+                <TextBlock Text="Miami Heat" FontWeight="Bold"  TextWrapping="Wrap" FontSize="20" HorizontalAlignment="Center" Foreground="White"></TextBlock>
+                <WrapPanel HorizontalAlignment="Center">
+                    <Image Source="/Resources/7_heat.png"  Width="100"></Image>
+                    <Image Source="/Resources/14_heat.png"  Width="100"></Image>
+                    <Image Source="/Resources/22_heat.png"  Width="100"></Image>
+                    <Image Source="/Resources/99_heat.png"  Width="100"></Image>
+                    <Image Source="/Resources/13_heat.png"  Width="100"></Image>
+                </WrapPanel>
+
+            </StackPanel>
+        </Border>
+    </StackPanel>
 
 </Window>
