ej formulario acabado

--- a/Tema3-Formulario/MainWindow.xaml
+++ b/Tema3-Formulario/MainWindow.xaml
@@ -5,10 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tema3_Formulario"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800">
+
     <DockPanel LastChildFill="True">
+
         <StackPanel DockPanel.Dock="Top">
-            <TextBlock FontSize="20" FontWeight="Bold" HorizontalAlignment="Center">Formulario</TextBlock>
+            <TextBlock FontSize="40" FontWeight="Bold" HorizontalAlignment="Center">Formulario</TextBlock>
         </StackPanel>
 
         <DockPanel LastChildFill="False" DockPanel.Dock="Bottom"  Height="40">
@@ -22,22 +24,88 @@
 
             </DockPanel>
 
-
-
         </DockPanel>
-        <Image DockPanel.Dock="Right" Source="/Resources/foto.jpg"></Image>
-        <DockPanel DockPanel.Dock="Right">
 
-            <Border BorderBrush="Black" BorderThickness="3">
-                <StackPanel>
-                    <Button>Hola</Button>
-                </StackPanel>
-            </Border>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
-            <StackPanel>
+
+            <StackPanel Grid.Column="0" Margin="5">
+
+                <Border BorderBrush="Black" BorderThickness="3" Margin="5" Background="#FF01B3FF" CornerRadius="3">
+                    <Border.Effect>
+                        <DropShadowEffect></DropShadowEffect>
+                    </Border.Effect>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" Grid.Column="0" Margin="4">Nombre</TextBlock>
+                        <TextBox Grid.Row="0" Grid.Column="1" Margin="4"></TextBox>
+                        <Image Grid.Row="0" Grid.Column="2" Margin="4" Source="/Resources/info.png" Width="20" ToolTip="Máximo 100 caracteres"></Image>
+
+
+
+                        <TextBlock Grid.Row="1" Grid.Column="0" Margin="4">Edad</TextBlock>
+                        <TextBox Grid.Row="1" Grid.Column="1" Margin="4"></TextBox>
+                        <Image Grid.Row="1" Grid.Column="2" Margin="4" Source="/Resources/info.png" Width="20" ToolTip="Número entre 0 y 100"></Image>
+
+
+                        <TextBlock Grid.Row="2" Grid.Column="0" Margin="4">Dirección</TextBlock>
+                        <TextBox Grid.Row="2" Grid.Column="1" Margin="4"></TextBox>
+                        <Image Grid.Row="2" Grid.Column="2" Margin="4" Source="/Resources/info.png" Width="20" ToolTip="Incluir codigo postal"></Image>
+
+
+                    </Grid>
+                </Border>
+
+                <Border BorderBrush="Black" BorderThickness="3" Margin="5" Background="#FFF7EDBE" CornerRadius="3">
+                    <Border.Effect>
+                        <DropShadowEffect></DropShadowEffect>
+                    </Border.Effect>
+                    <StackPanel>
+                        <WrapPanel>
+                            <GroupBox Header="Aficiones" Margin="12" Width="200">
+                                <StackPanel Margin="5">
+                                    <CheckBox>Hacer deporte</CheckBox>
+                                    <CheckBox>Viajar</CheckBox>
+                                    <CheckBox>Ver series</CheckBox>
+                                    <CheckBox>Leer comics</CheckBox>
+                                </StackPanel>
+
+                            </GroupBox>
+                            <GroupBox Header="Estado Civil" Margin="12" Width="200">
+                                <StackPanel Margin="5">
+                                    <RadioButton IsChecked="True">Soltero</RadioButton>
+                                    <RadioButton>Casado</RadioButton>
+                                    <RadioButton>Divorciado</RadioButton>
+                                    <RadioButton>Viudo</RadioButton>
+                                </StackPanel>
+                            </GroupBox>
+                        </WrapPanel>
+                    </StackPanel>
+                </Border>
 
             </StackPanel>
-        </DockPanel>
+
+            <Image Grid.Column="1" Source="/Resources/foto.jpg" Stretch="Fill"></Image>
+
+        </Grid>
+
+
+
+
 
 
     </DockPanel>
